; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Object.c_DeleteLock.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Object.c_DeleteLock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KS_DELETELOCK_COUNT = common dso_local global i32 0, align 4
@KS_CURRENT_LOCK_COUNT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @DeleteLock(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = icmp eq i32* %3, null
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  br label %13

6:                                                ; preds = %1
  %7 = load i32, i32* @KS_DELETELOCK_COUNT, align 4
  %8 = call i32 @KS_INC(i32 %7)
  %9 = load i32, i32* @KS_CURRENT_LOCK_COUNT, align 4
  %10 = call i32 @KS_DEC(i32 %9)
  %11 = load i32*, i32** %2, align 8
  %12 = call i32 @OSDeleteLock(i32* %11)
  br label %13

13:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @KS_INC(i32) #1

declare dso_local i32 @KS_DEC(i32) #1

declare dso_local i32 @OSDeleteLock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
